<resources>
    <string name="app_name">MedCalc</string>
    <string name="lbl_glucose">Glucose (mmol/l) &#8596; (mg/dl)</string>
    <string name="lbl_hemoglobin">Hemoglobin (mmol/l) &#8596; (g/dl)</string>
    <string name="lbl_triglycerides">Triglycerides (mmol/l) &#8596; (mg/dl)</string>
    <string name="lbl_cholesterol">Cholesterol (mmol/l) &#8596; (mg/dl)</string>
    <string name="lbl_creatinine">Creatinine (umol/l) &#8596; (mg/dl)</string>
    <string name="btnClear">Clear</string>
    <string name="menu_about">About</string>
    <string name="title_activity_about">About</string>

    <string name="title_section1">Basic</string>
    <string name="title_section2">Cockroft</string>
    <string name="title_section3">eGFR</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Soon!</string>

    <!-- weigth -->
    <string name="bmi_weight">Weight (kg)</string>
    <string name="bm_height">Height (cm)</string>
    <string name="title_section_bmi">BMI</string>
</resources>
