<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.mycompany.yasc.BasicCalculation">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mainLinear">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lbl_glucose"
            android:id="@+id/lblGlucoze" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/glucose_mmol"
                android:singleLine="true"
                android:hint="mmol/l"
                android:numeric="decimal"
                android:imeOptions="actionDone"
                android:layout_weight="0.5" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/glucose_mg"
                android:singleLine="true"
                android:hint="mg/dl"
                android:numeric="decimal"
                android:imeOptions="actionDone"
                android:layout_weight="0.5" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lbl_cholesterol"
            android:id="@+id/lblCholesterol" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:hint="mmol/l"
                android:numeric="decimal"
                android:imeOptions="actionDone"
                android:id="@+id/cholesterol_mmol"
                android:layout_weight="0.5" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:hint="mg/dl"
                android:numeric="decimal"
                android:imeOptions="actionDone"
                android:id="@+id/cholesterol_mg"
                android:layout_weight="0.5" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lbl_triglycerides"
            android:id="@+id/lblTriglyceride" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:hint="mmol/l"
                android:numeric="decimal"
                android:imeOptions="actionDone"
                android:layout_weight="0.5"
                android:id="@+id/triglycerides_mmol" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:hint="mg/dl"
                android:numeric="decimal"
                android:imeOptions="actionDone"
                android:layout_weight="0.5"
                android:id="@+id/triglycerides_mg" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lbl_hemoglobin"
            android:id="@+id/lblHemoglobin_mmol" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:hint="mmol/l"
                android:numeric="decimal"
                android:imeOptions="actionDone"
                android:layout_weight="0.5"
                android:id="@+id/hemoglobin_mmol" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:hint="g/dl"
                android:numeric="decimal"
                android:imeOptions="actionDone"
                android:layout_weight="0.5"
                android:id="@+id/hemoglobin_mg" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lbl_creatinine"
            android:id="@+id/lblCreatinine" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:hint="mmol/l"
                android:numeric="decimal"
                android:imeOptions="actionDone"
                android:layout_weight="0.5"
                android:id="@+id/creatinine_mmol" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:hint="mmol/l"
                android:numeric="decimal"
                android:imeOptions="actionDone"
                android:layout_weight="0.5"
                android:id="@+id/creatinine_mg" />
        </LinearLayout>

    </LinearLayout>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnClear"
        android:id="@+id/btnClear"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</FrameLayout>
